webmonitor/public/stylesheets/TerraMA2WebMonitor.css
/* ... */
.terrama2-layerexplorer-minus, .terrama2-layerexplorer-plus {
  background-image: none !important;
  float: none !important;
  width: 14px !important;
}

/*
 * Component: Sidebar Mini
 */
@media (min-width: 768px) {
  .sidebar-mini.sidebar-collapse .content-wrapper,
  .sidebar-mini.sidebar-collapse .right-side,
  .sidebar-mini.sidebar-collapse .main-footer {
    margin-left: 50px !important;
    z-index: 840;
  }
  .sidebar-mini.sidebar-collapse .main-sidebar {
    -webkit-transform: translate(0, 0);
    -ms-transform: translate(0, 0);
    -o-transform: translate(0, 0);
    transform: translate(0, 0);
    width: 50px !important;
    z-index: 850;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li {
    position: relative;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li > span {
    margin-right: 0;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover {
    background-color: #1e282c;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > span:not(.pull-right),
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > .treeview-menu {
    display: block !important;
    position: absolute;
    width: 180px;
    left: 50px;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > span {
    top: 0;
    padding: 10px 0px 10px 20px;
    background-color: inherit;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > span > i {
    margin-left: -5px;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > .pull-right-container {
    top: 0 !important;
    height: 40px !important;
    float: right;
    width: auto!important;
    left: 200px!important;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > .pull-right-container > .label:not(:first-of-type) {
    display: none;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover .treeview-menu {
    top: 40px;
    margin-left: 0;
  }
  .sidebar-mini.sidebar-collapse .main-sidebar .user-panel > .info,
  .sidebar-mini.sidebar-collapse .sidebar-form,
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li > span > span,
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li .treeview-menu,
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li > span > .pull-right,
  .sidebar-mini.sidebar-collapse .sidebar-menu li.header {
    display: none !important;
    -webkit-transform: translateZ(0);
  }
  .sidebar-mini.sidebar-collapse .main-header .logo {
    width: 50px;
  }
  .sidebar-mini.sidebar-collapse .main-header .logo > .logo-mini {
    display: block;
    margin-left: -15px;
    margin-right: -15px;
    font-size: 18px;
  }
  .sidebar-mini.sidebar-collapse .main-header .logo > .logo-lg {
    display: none;
  }
  .sidebar-mini.sidebar-collapse .main-header .navbar {
    margin-left: 50px;
  }
  .sidebar-mini.sidebar-collapse form {
    display: none;
  }
  .sidebar-mini.sidebar-collapse #terrama2-sortlayers {
    display: none;
  }
}

#wmsUri {
  width: 505px;
  margin-left: 5px;
  float: left;
}

#addLayers {
  float: left;
}

#layersModalBody > span {
  max-height: 370px;
  /*overflow: overlay;*/
  overflow-y: auto;
}

#layersModalBody > span > ul > li > span {
  margin-left: 5px;
}

#layersModalBody > span > ul {
  list-style: none;
}

#terrama2Alert {
  z-index: 99999;
  position: fixed;
  top: 60px;
  left: 45%;
  width: 450px;
}

#terrama2-sortlayers{
  cursor: move;
}

#terrama2-sortlayers ul {
  list-style: none;
  padding-left: 10px;
}

#terrama2-sortlayers ul li {
  padding: 5px 0 5px 0;
}

.terrama2-datepicker-icon {
  margin-right: 15px;
  float: right;
  cursor: pointer;
}

.slider-content {
  position: absolute;
  background-color: white;
  width: 200px;
  /*bottom: 40px;*/
  height: 55px;
  padding: 6px;
  z-index: 2000;
  opacity: 0.9;
  border-radius: 10px;
  margin-left: -10px !important;
}

.slider-content > div {
  margin-left: 15px;
  margin-right: 15px;
}
.slider-content > label {
  margin-left: 15px;
  color: #4b646f;
}

.status-icon {
  width: 13px;
  height: 13px;
}

.span-group-icon {
  position: absolute;
  margin-left: 5px;
  margin-top: -2px;
}

.span-layer-icon {
  position: absolute;
  margin-left: 5px;
  margin-top: -8px;
}

.terrama2-layerexplorer-checkbox {
  margin-left: 25px !important;
}

/*
  @description It performs a text truncate in string. You should specify width limit using style or another class.
  In Layers Explorer Section, the recommended width is 140px;

  @example
  <span class=".terrama2-text-truncate" style="width: 100px;">This text will be truncated</span>

  This text ...
*/
.terrama2-text-truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.ui-sortable .terrama2-layerexplorer-checkbox-span {
  width: 140px;
  margin-left: 40px !important;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.unsortable .terrama2-datepicker-icon {
  margin-top: -30px !important;
}

/**
 * It handles Mozila FireFox CSS specific styles
 */
@-moz-document url-prefix() {
  /*
    It fixes the position of dropdown icon on layer explorer. Without it, the icon will overflow to the next li item
  */
  .ui-sortable .group-name span i {
    margin-top: -16px !important;
  }

  .sidebar-collapse .ui-sortable .group-name span i {
    margin-top: 0px !important;
  }

  .terrama2-layerexplorer-checkbox-span {
    text-indent: 8px !important;
  }

  .slider-content button[class~="close-slider"]{
    margin-top: -25px !important;
  }

  .terrama2-layer-tools {
    margin-top: -20px !important;
  }
}
/* ... */

